<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="18dp"
                android:src="@color/teal_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_detail"
                android:text="@string/title"/>

            <RatingBar
                android:id="@+id/rat_detail"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:progressTint="@color/yellow"
                android:backgroundTint="@color/yellow"
                android:secondaryProgressTint="@color/yellow"
                android:progressBackgroundTint="@color/darkgrey"
                android:numStars="5"
                android:scaleX=".4"
                android:scaleY=".4"
                android:stepSize="0.2"
                android:isIndicator="true"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/year"/>

            <TextView
                android:id="@+id/tv_year_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/rat_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/year"/>


            <TextView
                android:id="@+id/label_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/teal_200"
                app:layout_constraintTop_toBottomOf="@+id/tv_year_detail"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/tv_description_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                android:textAlignment="textStart"
                android:textColor="@color/grey_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_desc"
                android:text="@string/description"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.ivbaranov.mfb.MaterialFavoriteButton
            android:id="@+id/btn_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mfb_favorite_image="@drawable/ic_favorite"
            app:mfb_not_favorite_image="@drawable/ic_unfavorite"
            app:mfb_size="64"
            app:mfb_rotation_duration="100"
            app:mfb_bounce_duration="100"
            tools:ignore="MissingConstraints"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>