<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg"
        tools:context=".ui.home.MainActivity">

               <com.google.android.material.tabs.TabLayout
                   android:id="@+id/tabs"
                   android:layout_height="wrap_content"
                   android:layout_width="match_parent" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

    </LinearLayout>
